[package]
name = "mcp"
description = "Copy file to multiple targets"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
multiqueue2 = { git = "https://github.com/abbychau/multiqueue2.git" }
question = "0.2"

[profile.release]
opt-level = 3
strip = true
lto = true
